cmake_minimum_required(VERSION 3.20)
project(semtwentytwoeleven)

set(CMAKE_CXX_STANDARD 20)

add_executable(semtwentytwoeleven main.cpp)
add_executable(main2 main2.cpp)
add_executable(list list_overlook.cpp)
add_executable(map_example map_example.cpp)
add_executable(vector_updated vector_updated.cpp)
